# Job_Scout_Agent

./: .gitignore  main.py  pyproject.toml
agents/: filter.py  job_fetcher.py  job_scorer.py  llm_client.py  profile_builder.py  tailor_resume.py
graph/: state.py
prompts/: job_scorer.yaml  profile_builder.yaml  resume_tailor.yaml
